--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<mat-card>Simple card</mat-card>
+<div fxLayout="row wrap">
+    <div>1. One</div> <div>2. Two</div> <div>3. Three</div> <div>4. Four</div>
+  </div>
