--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,13 @@
-<div fxLayout="row wrap">
-    <div>1. One</div> <div>2. Two</div> <div>3. Three</div> <div>4. Four</div>
-  </div>
+<div fxLayout="column">
+    <app-navbar fxLayout="row" ></app-navbar>
+    <div fxLayout="row wrap" fxLayout.lt-sm="column" fxLayoutGap="2%">
+        <ng-container *ngFor="let _ of [1,2,3,4,5]">
+            <app-moviecard 
+            fxFlex="0 1 calc(25% - 2%)"
+            fxFlex.lt-md="0 1 calc(33.3% - 2%)"
+
+            
+            ></app-moviecard>
+        </ng-container>
+    </div>
+</div>
