--- a/webApp/src/app/moviecards/moviecardpage1/moviecardpage1.component.css
+++ b/webApp/src/app/moviecards/moviecardpage1/moviecardpage1.component.css
@@ -1,19 +1,8 @@
-mat-card{
-    margin-bottom: 2%;
-}
 
-.mat-card-header .mat-card-title {
-    max-width: 30em;
-    overflow: hidden;
+mat-grid-tile{
+    border-radius: 8%;
+    border: 1px;
+    border-color: darkgray;
+    border-style: solid;
 }
-
-p{
-    min-height:10em;
-    max-height:10em;
-    overflow:auto;
-}
-
-button{
-    background-color: #96BAF2;
-    color: white;
-}
+  
