--- a/webApp/src/app/moviecards/moviecardpage1/moviecardpage1.component.html
+++ b/webApp/src/app/moviecards/moviecardpage1/moviecardpage1.component.html
@@ -1,12 +1,18 @@
-<mat-card class="example-card">
-    <mat-card-header>
-      <mat-card-title>{{data.title | slice:0:37}}...</mat-card-title>
-    </mat-card-header>
-    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-    <mat-card-content>
-      <p>{{data.description}}</p>
-    </mat-card-content>
-    <mat-card-actions align="center">
-      <button mat-button>Add to watchlist</button>
-    </mat-card-actions>
-  </mat-card>
+<mat-grid-list [cols]="breakpoint" (window:resize)="onResize($event)" gutterSize="1%">
+  <mat-grid-tile (click)="onClickMe()">
+    <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+    <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+  </mat-grid-tile>
+
+  <mat-grid-tile (click)="onClickMe()">
+      <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+      <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+    </mat-grid-tile>
+
+    <mat-grid-tile (click)="onClickMe()">
+        <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+        <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+      </mat-grid-tile>
+
+
+</mat-grid-list>
