un peu de code dans la navbar pour tester movieService (clique sur le bouton de connexion)

--- a/webApp/src/app/navbar/navbar.component.html
+++ b/webApp/src/app/navbar/navbar.component.html
@@ -6,7 +6,7 @@
     <span class="example-fill-remaining-space"></span>
 
     <div>
-      <button mat-flat-button *ngFor="let button of buttons">
+      <button mat-flat-button *ngFor="let button of buttons" (click)="tempoTestAPI()">
         {{button}}
       </button>
     </div> 
