--- a/webApp/src/app/moviecards/moviecardpage1/moviecardpage1.component.css
+++ b/webApp/src/app/moviecards/moviecardpage1/moviecardpage1.component.css
@@ -4,5 +4,10 @@ mat-grid-tile{
     border: 1px;
     border-color: darkgray;
     border-style: solid;
+    transition: transform .2s
 }
+  
+  mat-grid-tile:hover {
+    transform: scale(1.05); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+  }
   
