Navbar fixé en haut

--- a/webApp/src/app/app.component.html
+++ b/webApp/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div>
     <app-navbar></app-navbar>
-    <div>
+    <div class="main">
         <app-moviecardpage1></app-moviecardpage1>
     </div>
 </div>
