--- a/webApp/src/app/movie-dialog/movie-dialog.component.html
+++ b/webApp/src/app/movie-dialog/movie-dialog.component.html
@@ -9,5 +9,5 @@
 
 
 <div mat-dialog-actions>
-    <button mat-button mat-dialog-close>No Thanks</button>
+    <button mat-button mat-dialog-close>+ Watchlist</button>
 </div>
