--- a/webApp/src/app/moviecards/moviecardpage1/moviecardpage1.component.html
+++ b/webApp/src/app/moviecards/moviecardpage1/moviecardpage1.component.html
@@ -7,12 +7,189 @@
   <mat-grid-tile (click)="onClickMe()">
       <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
       <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-    </mat-grid-tile>
+  </mat-grid-tile>
 
-    <mat-grid-tile (click)="onClickMe()">
-        <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-        <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-      </mat-grid-tile>
+  <mat-grid-tile (click)="onClickMe()">
+    <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+    <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+</mat-grid-tile>
 
 
 </mat-grid-list>
