--- a/webApp/src/app/moviecards/moviecardpage1/moviecardpage1.component.css
+++ b/webApp/src/app/moviecards/moviecardpage1/moviecardpage1.component.css
@@ -9,5 +9,6 @@ mat-grid-tile{
   
   mat-grid-tile:hover {
     transform: scale(1.05); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.801);
   }
   
