Une movie card fonctionne avec l'API

--- a/webApp/src/app/moviecards/moviecardpage1/moviecardpage1.component.html
+++ b/webApp/src/app/moviecards/moviecardpage1/moviecardpage1.component.html
@@ -1,195 +1,4 @@
-<mat-grid-list [cols]="breakpoint" (window:resize)="onResize($event)" gutterSize="1%">
-  <mat-grid-tile (click)="onClickMe()">
-    <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-    <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-  </mat-grid-tile>
-
-  <mat-grid-tile (click)="onClickMe()">
-      <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-      <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-  </mat-grid-tile>
-
-  <mat-grid-tile (click)="onClickMe()">
-    <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-    <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
-</mat-grid-tile>  <mat-grid-tile (click)="onClickMe()">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-  <mat-grid-tile-footer>Bloup bloup</mat-grid-tile-footer>
+<mat-grid-tile (click)="onClickMe()">
+    <img src="{{data[0].posterlink}}" alt="">
+    <mat-grid-tile-footer>{{data[0].title}}</mat-grid-tile-footer>
 </mat-grid-tile>
-
-
-</mat-grid-list>
