--- a/webApp/src/app/moviecards/moviecardpage1/moviecardpage1.component.css
+++ b/webApp/src/app/moviecards/moviecardpage1/moviecardpage1.component.css
@@ -1,19 +1,14 @@
-
 mat-grid-tile{
-    border-radius: 8%;
-    border: 1px;
-    border-color: darkgray;
-    border-style: solid;
-    transition: transform .2s
+  border-radius: 8%;
+  border: 1px;
+  border-color: darkgray;
+  border-style: solid;
+  transition: transform .2s;
+  min-height: 100px;
+  min-width: 100px;
 }
 
-mat-grid-list{
-  min-height: 100vh;
-  overflow: scroll;
+mat-grid-tile:hover {
+  transform: scale(1.05); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.801);
 }
-  
-  mat-grid-tile:hover {
-    transform: scale(1.05); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
-    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.801);
-  }
-  
