--- a/webApp/src/app/pages/page1/page1.component.html
+++ b/webApp/src/app/pages/page1/page1.component.html
@@ -1,6 +1,11 @@
 <mat-grid-list [cols]="breakpoint" (window:resize)="onResize($event)" gutterSize="1%">
   <div *ngIf="movies else loading">
-    <app-moviecardpage1 [data]="movies"></app-moviecardpage1>
+    <div *ngFor="let movie of movies; let i=index">
+        <mat-grid-tile (click)="onClickMe(i)">
+            <img src="http://fr.web.img5.acsta.net/pictures/18/10/30/12/42/3835017.jpg" alt="">
+            <mat-grid-tile-footer>{{movie.title}}</mat-grid-tile-footer>
+        </mat-grid-tile>
+    </div>
   </div>
 </mat-grid-list>
 
