--- a/webApp/src/app/movie-dialog/movie-dialog.component.html
+++ b/webApp/src/app/movie-dialog/movie-dialog.component.html
@@ -1,7 +1,7 @@
 <h1 mat-dialog-title>{{data.name}}</h1>
 
 <div class= "infos">
-  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
+  <img src={{data.poster}} alt="">
   <div class="infosContainer">
     <p class="textInfos">{{data.synopsis}}</p>
   </div>
