C'est bon le tri marche, donc là implémentation seulement du tri par genre, j'ai plus qu'à faire le reste et aussi pour les autres pages

--- a/webApp/src/app/sortbar/sort-bar-page1/sort-bar-page1.component.html
+++ b/webApp/src/app/sortbar/sort-bar-page1/sort-bar-page1.component.html
@@ -1,1 +1,1 @@
-<app-select-names [data]="dataDirectors" [handlerChange]="onChangeDirectors"></app-select-names>
+<app-select-names [data]="dataGenres" [handlerChange]="onClickGenres"></app-select-names>
