--- a/webApp/src/app/sortbar/sorttools/select-names/select-names.component.html
+++ b/webApp/src/app/sortbar/sorttools/select-names/select-names.component.html
@@ -1,3 +1,3 @@
-<select multiple size="3" (change)="handlerChange($event.target.options)">
+<select multiple size="3" #device (change)="handlerChange($event.target)" (click)="onClick($event.target, device)">
   <option *ngFor="let name of data" [value]="name">{{ name}} </option>
 </select> 
