--- a/webApp/src/app/sortbar/sort-bar-page1/sort-bar-page1.component.html
+++ b/webApp/src/app/sortbar/sort-bar-page1/sort-bar-page1.component.html
@@ -1,1 +1,2 @@
 <app-select-names [data]="dataGenres" [handlerChange]="onChangeGenres"></app-select-names>
+<app-select-names [data]="dataReleaseDates" [handlerChange]="onChangeReleaseDates"></app-select-names>
