correction parce que l'objet Date de la librairie standard de JS commence les mois à 0 au lieu de 1 (1 qui est la norme dans environ tous les pays)

--- a/webApp/src/app/movie-dialog/movie-dialog.component.html
+++ b/webApp/src/app/movie-dialog/movie-dialog.component.html
@@ -4,6 +4,7 @@
   <img src={{data.poster}} alt="">
   <div class="infosContainer">
     <p class="textInfos">{{data.synopsis}}</p>
+    <p class='textInfos'>{{data.releasedate}}</p>
   </div>
 </div>
 
