ajout page 2, mais y'a un bug d'affichage et je sais pas pourquoi

--- a/webApp/src/app/navbar/navbar.component.html
+++ b/webApp/src/app/navbar/navbar.component.html
@@ -16,8 +16,7 @@
 
 
   <mat-tab label="Watchlist">
-    <h1>Some more tab content</h1>
-    <p>...</p>
+    <app-page2></app-page2>
   </mat-tab>
 
   
