ajout tri par notes sur la page 2

--- a/webApp/src/app/sortbar/sort-bar-page2/sort-bar-page2.component.html
+++ b/webApp/src/app/sortbar/sort-bar-page2/sort-bar-page2.component.html
@@ -1,1 +1,2 @@
 <app-select-names [data]="dataGenres" [handlerChange]="onChangeGenres"></app-select-names>
+<app-select-names [data]="dataRates" [handlerChange]="onChangeRates"></app-select-names>
