ajout des films en fonction de la géolocalisation et changement pour rajouter des intervalles pour l'affichage et je suis deg parce que y'a de la redondance dans MovieService (j'avais mis un paramètre fonctionnel, mais avec le js même si on met des await ça reste asynchrone et étrangement long)

--- a/webApp/src/app/navbar/navbar.component.html
+++ b/webApp/src/app/navbar/navbar.component.html
@@ -21,8 +21,7 @@
 
   
   <mat-tab label="Mon ciné">
-    <h1>Some more tab content</h1>
-    <p>...</p>
+    <app-page3></app-page3>
   </mat-tab>
 
   <mat-tab>
