oublie de commit

--- a/webApp/src/app/sortbar/sort-bar-page3/sort-bar-page3.component.html
+++ b/webApp/src/app/sortbar/sort-bar-page3/sort-bar-page3.component.html
@@ -1,1 +1,3 @@
 <app-select-names [data]="dataGenres" [handlerChange]="onChangeGenres"></app-select-names>
+<app-select-names [data]="dataCities" [handlerChange]="onChangeCities"></app-select-names>
+<app-select-names [data]="dataCinemaNames" [handlerChange]="onChangeCinemaNames"></app-select-names>
