ajout des boutons (c'est encore à améliorer vis-à-vis du nombre de refresh) , là faut que je mette en https je pense pour la géolocalisation

--- a/webApp/src/app/movie-dialog/movie-dialog.component.html
+++ b/webApp/src/app/movie-dialog/movie-dialog.component.html
@@ -7,7 +7,7 @@
   </div>
 </div>
 
-
+<!--mat-button mat-dialog-close -->
 <div mat-dialog-actions>
-    <button mat-button mat-dialog-close>+ Watchlist</button>
+    <button mat-button  *ngFor="let b of buttons" (click)="b.getHandlerClick()(b)">{{b.getName()}}</button>
 </div>
