ajouts beaux boutons pour l'accueil histoire de

--- a/webApp/src/app/home/home.component.html
+++ b/webApp/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <h1>
-  home
+  CineWeb
 </h1>
-<button routerLink='/account' routerLinkActive="active" skipLocationChange='true'>{{nameConnection}}</button>
-<button routerLink='/account' routerLinkActive="active" skipLocationChange='true'>{{nameCreateAccount}}</button>
+<button mat-raised-button routerLink='/account' routerLinkActive="active" skipLocationChange='true'>{{nameConnection}}</button>
+<button mat-raised-button routerLink='/account' routerLinkActive="active" skipLocationChange='true'>{{nameCreateAccount}}</button>
