--- a/webApp/src/app/navbar/navbar.component.html
+++ b/webApp/src/app/navbar/navbar.component.html
@@ -26,7 +26,7 @@
 
   <mat-tab>
     <ng-template mat-tab-label>
-      <button mat-flat-button *ngFor="let button of buttons" (click)="tempoTestAPI()">
+      <button mat-flat-button *ngFor="let button of buttons" (click)="disconnectHandler()">
         {{button}}
       </button>
     </ng-template>
