--- a/webApp/src/app/accountform/accountform.component.html
+++ b/webApp/src/app/accountform/accountform.component.html
@@ -6,9 +6,23 @@
 
   <mat-form-field>
     <input matInput placeholder="{{nameInputPwd}}" [formControl]="passwordControl" [type]="hide ? 'password' : 'text'" required #pwd>
+    <mat-error *ngIf="passwordControl.invalid">{{getErrorMessagePassword()}}</mat-error>
     <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
   </mat-form-field>
   <div>
+    <!--
+      <span [ngSwitch]='errorMessage'>
+      <span *ngSwitchCase='1'>
+        <p #alreadyExists >{{messageAlreadyExists}}</p>
+      </span>
+      <span *ngSwitchCase='2'>
+          <p #alreadyExists >{{messageBadEntry}}</p>
+        </span>
+    </span>
+    -->
+    <span *ngIf='errorMessage !== 0'>
+      <p>{{getErrorMessageInvalid()}}</p>
+    </span>
     <button mat-raised-button  type="submit" (click)="handlerClickConnect(email.value, pwd.value)">{{nameConnect}}</button>
     <button mat-raised-button  type="submit" (click)="handlerClickCreate(email.value, pwd.value)">{{nameCreateAccount}}</button>
   </div>
